Inflation swaps working
