# flatbuffers/python/quantra/PriceYearOnYearInflationSwapRequest.py
@@ -1,0 +1,173 @@
+# automatically generated by the FlatBuffers compiler, do not modify
+
+# namespace: quantra
+
+import flatbuffers
+from flatbuffers.compat import import_numpy
+np = import_numpy()
+
+# Request to price one or more YYIIS trades.
+class PriceYearOnYearInflationSwapRequest(object):
+    __slots__ = ['_tab']
+
+    @classmethod
+    def GetRootAs(cls, buf, offset=0):
+        n = flatbuffers.encode.Get(flatbuffers.packer.uoffset, buf, offset)
+        x = PriceYearOnYearInflationSwapRequest()
+        x.Init(buf, n + offset)
+        return x
+
+    @classmethod
+    def GetRootAsPriceYearOnYearInflationSwapRequest(cls, buf, offset=0):
+        """This method is deprecated. Please switch to GetRootAs."""
+        return cls.GetRootAs(buf, offset)
+    # PriceYearOnYearInflationSwapRequest
+    def Init(self, buf, pos):
+        self._tab = flatbuffers.table.Table(buf, pos)
+
+    # PriceYearOnYearInflationSwapRequest
+    def Pricing(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(4))
+        if o != 0:
+            x = self._tab.Indirect(o + self._tab.Pos)
+            from quantra.Pricing import Pricing
+            obj = Pricing()
+            obj.Init(self._tab.Bytes, x)
+            return obj
+        return None
+
+    # PriceYearOnYearInflationSwapRequest
+    def Swaps(self, j):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        if o != 0:
+            x = self._tab.Vector(o)
+            x += flatbuffers.number_types.UOffsetTFlags.py_type(j) * 4
+            x = self._tab.Indirect(x)
+            from quantra.PriceYearOnYearInflationSwap import PriceYearOnYearInflationSwap
+            obj = PriceYearOnYearInflationSwap()
+            obj.Init(self._tab.Bytes, x)
+            return obj
+        return None
+
+    # PriceYearOnYearInflationSwapRequest
+    def SwapsLength(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        if o != 0:
+            return self._tab.VectorLen(o)
+        return 0
+
+    # PriceYearOnYearInflationSwapRequest
+    def SwapsIsNone(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        return o == 0
+
+    # Include detailed cashflows in response.
+    # PriceYearOnYearInflationSwapRequest
+    def IncludeFlows(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(8))
+        if o != 0:
+            return bool(self._tab.Get(flatbuffers.number_types.BoolFlags, o + self._tab.Pos))
+        return False
+
+def PriceYearOnYearInflationSwapRequestStart(builder):
+    builder.StartObject(3)
+
+def Start(builder):
+    PriceYearOnYearInflationSwapRequestStart(builder)
+
+def PriceYearOnYearInflationSwapRequestAddPricing(builder, pricing):
+    builder.PrependUOffsetTRelativeSlot(0, flatbuffers.number_types.UOffsetTFlags.py_type(pricing), 0)
+
+def AddPricing(builder, pricing):
+    PriceYearOnYearInflationSwapRequestAddPricing(builder, pricing)
+
+def PriceYearOnYearInflationSwapRequestAddSwaps(builder, swaps):
+    builder.PrependUOffsetTRelativeSlot(1, flatbuffers.number_types.UOffsetTFlags.py_type(swaps), 0)
+
+def AddSwaps(builder, swaps):
+    PriceYearOnYearInflationSwapRequestAddSwaps(builder, swaps)
+
+def PriceYearOnYearInflationSwapRequestStartSwapsVector(builder, numElems):
+    return builder.StartVector(4, numElems, 4)
+
+def StartSwapsVector(builder, numElems):
+    return PriceYearOnYearInflationSwapRequestStartSwapsVector(builder, numElems)
+
+def PriceYearOnYearInflationSwapRequestAddIncludeFlows(builder, includeFlows):
+    builder.PrependBoolSlot(2, includeFlows, 0)
+
+def AddIncludeFlows(builder, includeFlows):
+    PriceYearOnYearInflationSwapRequestAddIncludeFlows(builder, includeFlows)
+
+def PriceYearOnYearInflationSwapRequestEnd(builder):
+    return builder.EndObject()
+
+def End(builder):
+    return PriceYearOnYearInflationSwapRequestEnd(builder)
+
+try:
+    from typing import List, Optional
+except:
+    pass
+
+class PriceYearOnYearInflationSwapRequestT(object):
+
+    # PriceYearOnYearInflationSwapRequestT
+    def __init__(self):
+        self.pricing = None  # type: Optional[PricingT]
+        self.swaps = None  # type: List[PriceYearOnYearInflationSwapT]
+        self.includeFlows = False  # type: bool
+
+    @classmethod
+    def InitFromBuf(cls, buf, pos):
+        priceYearOnYearInflationSwapRequest = PriceYearOnYearInflationSwapRequest()
+        priceYearOnYearInflationSwapRequest.Init(buf, pos)
+        return cls.InitFromObj(priceYearOnYearInflationSwapRequest)
+
+    @classmethod
+    def InitFromPackedBuf(cls, buf, pos=0):
+        n = flatbuffers.encode.Get(flatbuffers.packer.uoffset, buf, pos)
+        return cls.InitFromBuf(buf, pos+n)
+
+    @classmethod
+    def InitFromObj(cls, priceYearOnYearInflationSwapRequest):
+        x = PriceYearOnYearInflationSwapRequestT()
+        x._UnPack(priceYearOnYearInflationSwapRequest)
+        return x
+
+    # PriceYearOnYearInflationSwapRequestT
+    def _UnPack(self, priceYearOnYearInflationSwapRequest):
+        if priceYearOnYearInflationSwapRequest is None:
+            return
+        if priceYearOnYearInflationSwapRequest.Pricing() is not None:
+            self.pricing = PricingT.InitFromObj(priceYearOnYearInflationSwapRequest.Pricing())
+        if not priceYearOnYearInflationSwapRequest.SwapsIsNone():
+            self.swaps = []
+            for i in range(priceYearOnYearInflationSwapRequest.SwapsLength()):
+                if priceYearOnYearInflationSwapRequest.Swaps(i) is None:
+                    self.swaps.append(None)
+                else:
+                    priceYearOnYearInflationSwap_ = PriceYearOnYearInflationSwapT.InitFromObj(priceYearOnYearInflationSwapRequest.Swaps(i))
+                    self.swaps.append(priceYearOnYearInflationSwap_)
+        self.includeFlows = priceYearOnYearInflationSwapRequest.IncludeFlows()
+
+    # PriceYearOnYearInflationSwapRequestT
+    def Pack(self, builder):
+        if self.pricing is not None:
+            pricing = self.pricing.Pack(builder)
+        if self.swaps is not None:
+            swapslist = []
+            for i in range(len(self.swaps)):
+                swapslist.append(self.swaps[i].Pack(builder))
+            PriceYearOnYearInflationSwapRequestStartSwapsVector(builder, len(self.swaps))
+            for i in reversed(range(len(self.swaps))):
+                builder.PrependUOffsetTRelative(swapslist[i])
+            swaps = builder.EndVector()
+        PriceYearOnYearInflationSwapRequestStart(builder)
+        if self.pricing is not None:
+            PriceYearOnYearInflationSwapRequestAddPricing(builder, pricing)
+        if self.swaps is not None:
+            PriceYearOnYearInflationSwapRequestAddSwaps(builder, swaps)
+        PriceYearOnYearInflationSwapRequestAddIncludeFlows(builder, self.includeFlows)
+        priceYearOnYearInflationSwapRequest = PriceYearOnYearInflationSwapRequestEnd(builder)
+        return priceYearOnYearInflationSwapRequest
