# flatbuffers/python/quantra/PriceZeroCouponInflationSwapRequest.py
@@ -1,0 +1,173 @@
+# automatically generated by the FlatBuffers compiler, do not modify
+
+# namespace: quantra
+
+import flatbuffers
+from flatbuffers.compat import import_numpy
+np = import_numpy()
+
+# Request to price one or more ZCIIS trades.
+class PriceZeroCouponInflationSwapRequest(object):
+    __slots__ = ['_tab']
+
+    @classmethod
+    def GetRootAs(cls, buf, offset=0):
+        n = flatbuffers.encode.Get(flatbuffers.packer.uoffset, buf, offset)
+        x = PriceZeroCouponInflationSwapRequest()
+        x.Init(buf, n + offset)
+        return x
+
+    @classmethod
+    def GetRootAsPriceZeroCouponInflationSwapRequest(cls, buf, offset=0):
+        """This method is deprecated. Please switch to GetRootAs."""
+        return cls.GetRootAs(buf, offset)
+    # PriceZeroCouponInflationSwapRequest
+    def Init(self, buf, pos):
+        self._tab = flatbuffers.table.Table(buf, pos)
+
+    # PriceZeroCouponInflationSwapRequest
+    def Pricing(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(4))
+        if o != 0:
+            x = self._tab.Indirect(o + self._tab.Pos)
+            from quantra.Pricing import Pricing
+            obj = Pricing()
+            obj.Init(self._tab.Bytes, x)
+            return obj
+        return None
+
+    # PriceZeroCouponInflationSwapRequest
+    def Swaps(self, j):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        if o != 0:
+            x = self._tab.Vector(o)
+            x += flatbuffers.number_types.UOffsetTFlags.py_type(j) * 4
+            x = self._tab.Indirect(x)
+            from quantra.PriceZeroCouponInflationSwap import PriceZeroCouponInflationSwap
+            obj = PriceZeroCouponInflationSwap()
+            obj.Init(self._tab.Bytes, x)
+            return obj
+        return None
+
+    # PriceZeroCouponInflationSwapRequest
+    def SwapsLength(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        if o != 0:
+            return self._tab.VectorLen(o)
+        return 0
+
+    # PriceZeroCouponInflationSwapRequest
+    def SwapsIsNone(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(6))
+        return o == 0
+
+    # Include detailed cashflows in response.
+    # PriceZeroCouponInflationSwapRequest
+    def IncludeFlows(self):
+        o = flatbuffers.number_types.UOffsetTFlags.py_type(self._tab.Offset(8))
+        if o != 0:
+            return bool(self._tab.Get(flatbuffers.number_types.BoolFlags, o + self._tab.Pos))
+        return False
+
+def PriceZeroCouponInflationSwapRequestStart(builder):
+    builder.StartObject(3)
+
+def Start(builder):
+    PriceZeroCouponInflationSwapRequestStart(builder)
+
+def PriceZeroCouponInflationSwapRequestAddPricing(builder, pricing):
+    builder.PrependUOffsetTRelativeSlot(0, flatbuffers.number_types.UOffsetTFlags.py_type(pricing), 0)
+
+def AddPricing(builder, pricing):
+    PriceZeroCouponInflationSwapRequestAddPricing(builder, pricing)
+
+def PriceZeroCouponInflationSwapRequestAddSwaps(builder, swaps):
+    builder.PrependUOffsetTRelativeSlot(1, flatbuffers.number_types.UOffsetTFlags.py_type(swaps), 0)
+
+def AddSwaps(builder, swaps):
+    PriceZeroCouponInflationSwapRequestAddSwaps(builder, swaps)
+
+def PriceZeroCouponInflationSwapRequestStartSwapsVector(builder, numElems):
+    return builder.StartVector(4, numElems, 4)
+
+def StartSwapsVector(builder, numElems):
+    return PriceZeroCouponInflationSwapRequestStartSwapsVector(builder, numElems)
+
+def PriceZeroCouponInflationSwapRequestAddIncludeFlows(builder, includeFlows):
+    builder.PrependBoolSlot(2, includeFlows, 0)
+
+def AddIncludeFlows(builder, includeFlows):
+    PriceZeroCouponInflationSwapRequestAddIncludeFlows(builder, includeFlows)
+
+def PriceZeroCouponInflationSwapRequestEnd(builder):
+    return builder.EndObject()
+
+def End(builder):
+    return PriceZeroCouponInflationSwapRequestEnd(builder)
+
+try:
+    from typing import List, Optional
+except:
+    pass
+
+class PriceZeroCouponInflationSwapRequestT(object):
+
+    # PriceZeroCouponInflationSwapRequestT
+    def __init__(self):
+        self.pricing = None  # type: Optional[PricingT]
+        self.swaps = None  # type: List[PriceZeroCouponInflationSwapT]
+        self.includeFlows = False  # type: bool
+
+    @classmethod
+    def InitFromBuf(cls, buf, pos):
+        priceZeroCouponInflationSwapRequest = PriceZeroCouponInflationSwapRequest()
+        priceZeroCouponInflationSwapRequest.Init(buf, pos)
+        return cls.InitFromObj(priceZeroCouponInflationSwapRequest)
+
+    @classmethod
+    def InitFromPackedBuf(cls, buf, pos=0):
+        n = flatbuffers.encode.Get(flatbuffers.packer.uoffset, buf, pos)
+        return cls.InitFromBuf(buf, pos+n)
+
+    @classmethod
+    def InitFromObj(cls, priceZeroCouponInflationSwapRequest):
+        x = PriceZeroCouponInflationSwapRequestT()
+        x._UnPack(priceZeroCouponInflationSwapRequest)
+        return x
+
+    # PriceZeroCouponInflationSwapRequestT
+    def _UnPack(self, priceZeroCouponInflationSwapRequest):
+        if priceZeroCouponInflationSwapRequest is None:
+            return
+        if priceZeroCouponInflationSwapRequest.Pricing() is not None:
+            self.pricing = PricingT.InitFromObj(priceZeroCouponInflationSwapRequest.Pricing())
+        if not priceZeroCouponInflationSwapRequest.SwapsIsNone():
+            self.swaps = []
+            for i in range(priceZeroCouponInflationSwapRequest.SwapsLength()):
+                if priceZeroCouponInflationSwapRequest.Swaps(i) is None:
+                    self.swaps.append(None)
+                else:
+                    priceZeroCouponInflationSwap_ = PriceZeroCouponInflationSwapT.InitFromObj(priceZeroCouponInflationSwapRequest.Swaps(i))
+                    self.swaps.append(priceZeroCouponInflationSwap_)
+        self.includeFlows = priceZeroCouponInflationSwapRequest.IncludeFlows()
+
+    # PriceZeroCouponInflationSwapRequestT
+    def Pack(self, builder):
+        if self.pricing is not None:
+            pricing = self.pricing.Pack(builder)
+        if self.swaps is not None:
+            swapslist = []
+            for i in range(len(self.swaps)):
+                swapslist.append(self.swaps[i].Pack(builder))
+            PriceZeroCouponInflationSwapRequestStartSwapsVector(builder, len(self.swaps))
+            for i in reversed(range(len(self.swaps))):
+                builder.PrependUOffsetTRelative(swapslist[i])
+            swaps = builder.EndVector()
+        PriceZeroCouponInflationSwapRequestStart(builder)
+        if self.pricing is not None:
+            PriceZeroCouponInflationSwapRequestAddPricing(builder, pricing)
+        if self.swaps is not None:
+            PriceZeroCouponInflationSwapRequestAddSwaps(builder, swaps)
+        PriceZeroCouponInflationSwapRequestAddIncludeFlows(builder, self.includeFlows)
+        priceZeroCouponInflationSwapRequest = PriceZeroCouponInflationSwapRequestEnd(builder)
+        return priceZeroCouponInflationSwapRequest
